--- a/src/main/resources/templates/login.vm
+++ b/src/main/resources/templates/login.vm
@@ -105,21 +105,15 @@
                 </div>
             </div>
             <div class="form-group">
-                <label for="description" class="col-sm-3 control-label">作品描述:</label>
-                <div class="col-sm-9">
-                    <textarea type="text" rows="3" class="form-control" ng-model="mv.description" required id="description" placeholder="简单介绍一下自己的作品"></textarea>
-                </div>
-            </div>
-            <div class="form-group">
                 <label for="description" class="col-sm-3 control-label">作品详图:</label>
                 <div class="col-sm-9">
-                    <button type="button" class="login btn btn-info" ngf-select="mv.uploadDefImage($file)">上传作品详图(宫格图)</button>
+                    <button type="button" class="login btn btn-info" ngf-select="mv.uploadDefImage($file)">上传作品详图</button>
                 </div>
             </div>
             <div class="form-group">
                 <div class="col-sm-9 col-sm-offset-3">
-                    <img ng-src="{{mv.defimage}}" ng-if="!!mv.defimage">
-                    <div class="defimage" ng-if="!mv.defimage"></div>
+                    <img ng-src="{{mv.defImage}}" ng-if="!!mv.defImage">
+                    <div class="defimage" ng-if="!mv.defImage"></div>
                 </div>
             </div>
             <div class="input-group">
