--- a/src/main/resources/templates/index.vm
+++ b/src/main/resources/templates/index.vm
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>卡通形象设计大赛</title>
     <link href="//yun.duiba.com.cn/flatlab/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/css/degame.css" rel="stylesheet">
+    <link href="http://yangzuo.oss-cn-hangzhou.aliyuncs.com/ued/degame.css" rel="stylesheet">
 </head>
 <body>
 <header class="header">
