--- a/src/main/resources/templates/index.vm
+++ b/src/main/resources/templates/index.vm
@@ -116,6 +116,6 @@
 <script src="//yun.duiba.com.cn/admin/js/angular.min.js"></script>
 <script src="//yun.duiba.com.cn/admin/js/angular-animate.min.js"></script>
 <script src="//yun.duiba.com.cn/admin/js/ui-bootstrap-tpls-0.14.3.min.js"></script>
-<script src="/js/deGame.js"></script>
+<script src="http://yangzuo.oss-cn-hangzhou.aliyuncs.com/ued/deGame.js"></script>
 </body>
 </html>
