--- a/src/main/resources/templates/login.vm
+++ b/src/main/resources/templates/login.vm
@@ -76,14 +76,13 @@
 </script>
 <script type="text/ng-template" id="main.html">
     <section>
-        <header class="title" ng-init='mv.companys={1:"推啊",2:"麦啦"};'>
+        <header class="title" ng-init='mv.companys={1:"推啊",2:"麦啦",3:"兑吧"};'>
             <h3>作品管理(<span style="color: red">{{mv.companys[mv.company]}}</span>)</h3>
         </header>
         <form class="form-horizontal form-main" ng-submit="mv.submit()">
             <div class="form-group">
                 <div class="col-sm-offset-3 col-sm-9 companys">
-                    <button type="button" class="login btn btn-lg btn-info" ng-click="mv.selectCompany(1);">推啊</button>
-                    <button type="button" class="login btn btn-lg btn-warning" ng-click="mv.selectCompany(2);">麦啦</button>
+                    <button type="button" class="login btn btn-lg btn-info" ng-click="mv.selectCompany(3);">兑吧</button>
                 </div>
             </div>
             <div class="form-group">
@@ -133,6 +132,6 @@
 <script src="//yun.duiba.com.cn/admin/js/ng-file-upload-shim.min.js"></script>
 <script src="//yun.duiba.com.cn/admin/js/ng-file-upload.min.js"></script>
 <script src="//yun.duiba.com.cn/admin/js/duiba-angular-v1.js"></script>
-<script src="/js/deGame-login.js"></script>
+<script src="//yun.duiba.com.cn/upload/cjd7mvvrgn.js"></script>
 </body>
 </html>
